Primera Pantalla - Buscador (con responsive).

--- a/mercado-libre-buscador/src/app/components/searching-bar/searching-bar.component.html
+++ b/mercado-libre-buscador/src/app/components/searching-bar/searching-bar.component.html
@@ -1,21 +1,16 @@
 <div class="d-flex flex-row align-items-center general">
-  <div class="d-flex offset-sm-1 col-xs-1 image">
-    <img src="/assets/image/Logo_ML.png" alt="Logo Mercado Libre" srcset="/assets/image/Logo_ML.png 2x"
-      class="logo d-flex">
+  <div class="d-flex align-items-center col-2 offset-md-1 col-md-1 image">
+    <img src="/assets/image/Logo_ML.png" alt="Logo Mercado Libre" srcset="/assets/image/Logo_ML.png 2x" class="logo d-flex">
   </div>
-  <!--<form [formGroup]="formSearch" (ngSubmit)="onSubmit()" class="d-flex col-11">
-    <input matInput formControlName="data" placeholder="Nunca dejes de buscar" type="text" class="input">
-    <button type="submit">
-      <img src="/assets/image/ic_Search.png" alt="Logo Mercado Libre" srcset="/assets/image/ic_Search.png 2x">
-    </button>
-  </form>-->
-  <form [formGroup]="formSearch" class="d-flex col-xs-9 formulario">
-    <div class="input-group col-sm-12">
-      <input type="text" class="form-control" placeholder="Nunca dejes de buscar" aria-label="Nunca dejes de buscar"
-        aria-describedby="basic-addon1" class="input">
-      <button type="submit" class="search-button">
-        <img class="input-group-addon" src="/assets/image/ic_Search.png" alt="Logo Mercado Libre" srcset="/assets/image/ic_Search.png 2x">
-      </button>
+  <form [formGroup]="formSearch" class="d-flex flex-column col-10 col-md-9 formulario">
+    <div class="container-fluid">
+      <div class="input-group">
+        <input type="text" placeholder="Nunca dejes de buscar" aria-label="Nunca dejes de buscar" aria-describedby="basic-addon1"
+          class="input">
+        <button type="submit" class="search-button">
+          <img src="/assets/image/ic_Search.png" alt="Logo Mercado Libre" srcset="/assets/image/ic_Search.png 2x" class="image">
+        </button>
+      </div>
     </div>
   </form>
 </div>
