--- a/mercado-libre-buscador/src/app/search/components/searching-item/searching-item.component.html
+++ b/mercado-libre-buscador/src/app/search/components/searching-item/searching-item.component.html
@@ -1,3 +1,11 @@
-<p>
-  searching-item works!
-</p>
+<div class="container-fluid">
+  <!--<img href="item.picture" alt="Imagen del Producto" class="image">-->
+  <img [src]=test alt="Imagen del Producto" class="image">
+  <div class="details d-flex flex-column">
+    <div class="primary-line d-flex justify-content-between">
+        <span class="amount">$ 1.800</span>
+        <span class="d-flex align-items-end city">Capital Federal</span>
+    </div>
+    <span class="description">Apple Ipod 5g 16gb Leon</span>
+  </div>
+</div>
