--- a/mercado-libre-buscador/src/app/search/components/searching-list/searching-list.component.html
+++ b/mercado-libre-buscador/src/app/search/components/searching-list/searching-list.component.html
@@ -1,3 +1,4 @@
-<p>
-  searching-list works!
-</p>
+<div class="container-fluid d-flex offset-md-1 col-10">
+    <app-searching-item></app-searching-item>
+</div>
+
