--- a/mercado-libre-buscador/src/styles.sass
+++ b/mercado-libre-buscador/src/styles.sass
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./variables.sass"
+
 body
-    background-color: #EEEEEE
+    background-color: $backLightGrey
     height: 100%
