--- a/mercado-libre-buscador/src/app/components/searching-bar/searching-bar.component.sass
+++ b/mercado-libre-buscador/src/app/components/searching-bar/searching-bar.component.sass
@@ -1,3 +1,5 @@
+@import "../../../variables.sass"
+
 .general
     height: 60px
     .image
@@ -16,12 +18,12 @@
                 border: 0px
                 border-radius: 4px 0 0 4px
             ::placeholder
-                color: #999999
+                color: $placeholder
             .search-button
                 width: 50px
                 border: 0px
                 border-radius: 0 4px 4px
-                background-color: #EEEEEE
+                background-color: $backLightGrey
                 .image
                     width: 100%
                     padding: 8px
