--- a/mercado-libre-buscador/src/app/components/searching-bar/searching-bar.component.sass
+++ b/mercado-libre-buscador/src/app/components/searching-bar/searching-bar.component.sass
@@ -4,13 +4,13 @@
     height: 60px
     .image
         height: 100%
-        padding: 10px
+        padding: 10px 10px 10px 0
         .logo
             height: 100%
     .formulario
         padding: 0px
         .container-fluid
-            padding: 10px 10px 10px 0px
+            padding: 10px 0
             .input
                 font-size: 18px
                 padding: 7px 15px 9px 15px
@@ -28,6 +28,10 @@
                     width: 100%
                     padding: 8px
                 
+@media (max-width: 768px)
+    .general
+        .image
+            padding: 10px
 
 @media (max-width: 460px)
     .general
