--- a/mercado-libre-buscador/src/app/module-product/components/product/product.component.html
+++ b/mercado-libre-buscador/src/app/module-product/components/product/product.component.html
@@ -1,3 +1,24 @@
-<p>
-  product works!
-</p>
+<div class="d-flex flex-column offset-md-1 col-md-10 product">
+  <div *ngIf="!loading">
+    <div class="container-fluid d-flex flex-wrap justify-content-between">
+      <div>
+        <img [src]=item?.picture alt="Imagen del Producto" class="img-fluid">
+      </div>
+      <div class="bloque-compra">
+        <div class="detalle-superior">{{item?.condition}} - {{item?.sold_quantity}} vendidos</div>
+        <div class="title">{{item?.title}}</div>
+        <div class="amount">
+          {{ item?.price?.amount | currency:item?.price?.currency:'symbol-narrow':'1.0-0' | formatCurrency }}
+        </div>
+        <button mat-raised-button color="primary" class="button">Comprar</button>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="title-description">Description del Producto</div>
+      <span class="description">{{ item.description }}</span>
+    </div>
+  </div>
+  <div *ngIf="loading" class="d-flex justify-content-center">
+    <mat-spinner class="spinner" [diameter]="25"></mat-spinner>
+  </div>
+</div>
