--- a/mercado-libre-buscador/src/app/module-search/components/searching-list/searching-list.component.sass
+++ b/mercado-libre-buscador/src/app/module-search/components/searching-list/searching-list.component.sass
@@ -1,4 +1,11 @@
 @import "../../../../variables.sass"
+.bread
+    padding: 1rem 0 0 0
+.breadcrumb
+    padding: 0
+    color: $placeholder
+    p
+        padding: 0
 .list
     background-color: $backList
     padding: 0
