--- a/mercado-libre-buscador/src/app/module-search/components/searching-list/searching-list.component.html
+++ b/mercado-libre-buscador/src/app/module-search/components/searching-list/searching-list.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="items && items.length > 0" class="d-flex flex-column offset-md-1 col-md-10 bread">
+  <app-breadcrumb></app-breadcrumb>
+</div>
 <div class="d-flex flex-column offset-md-1 col-md-10 list" *ngFor="let item of items">
   <div *ngIf="!loading">
     <app-searching-item class="container-fluid" [item]=item></app-searching-item>
