Se corrijen datos del Breadcrumb.

--- a/mercado-libre-buscador/src/app/module-search/components/searching-list/searching-list.component.sass
+++ b/mercado-libre-buscador/src/app/module-search/components/searching-list/searching-list.component.sass
@@ -1,6 +1,6 @@
 @import "../../../../variables.sass"
 .bread
-    padding: 1rem 0 0 0
+    padding: 0
 .breadcrumb
     padding: 0
     color: $placeholder
@@ -9,6 +9,7 @@
 .list
     background-color: $backList
     padding: 0
+    margin-bottom: 40px
     .container-fluid
         padding: 0
     .divider
