--- a/mercado-libre-buscador/src/app/module-shared/components/breadcrumb/breadcrumb.component.sass
+++ b/mercado-libre-buscador/src/app/module-shared/components/breadcrumb/breadcrumb.component.sass
@@ -1,2 +1,7 @@
 .bread
-     padding-left: 0
+     padding: 16px 0px
+     font-size: 16px
+     .item
+         cursor: pointer
+     .last
+         font-weight: bold
