--- a/mercado-libre-buscador/src/app/module-product/components/product/product.component.html
+++ b/mercado-libre-buscador/src/app/module-product/components/product/product.component.html
@@ -1,11 +1,15 @@
+<div *ngIf="!loading" class="d-flex flex-column offset-md-1 col-md-10 bread">
+  <app-breadcrumb></app-breadcrumb>
+</div>
 <div class="d-flex flex-column offset-md-1 col-md-10 product">
   <div *ngIf="!loading">
-    <div class="container-fluid d-flex flex-column flex-lg-row justify-content-between">
+    <div class="container-fluid d-flex flex-column flex-md-row justify-content-between">
       <div class="image">
         <img [src]=item?.picture alt="Imagen del Producto" class="img-fluid">
       </div>
-      <div class="bloque-compra d-flex flex-column offset-lg-2">
-        <div class="detalle-superior">{{ item?.condition | translate }} - {{ item?.sold_quantity }} {{ (item?.sold_quantity > 1? "solds":"sold") | translate }}</div>
+      <div class="bloque-compra d-flex flex-column offset-md-1 offset-lg-2">
+        <div class="detalle-superior">{{ item?.condition | translate }} - {{ item?.sold_quantity }} {{ (item?.sold_quantity > 1? "solds":"sold") | translate
+          }}</div>
         <div class="title">{{item?.title}}</div>
         <div class="amount">
           {{ item?.price?.amount | currency:item?.price?.currency:'symbol-narrow':'1.0-0' | formatCurrency }}
