--- a/mercado-libre-buscador/src/app/module-search/components/searching-list/searching-list.component.html
+++ b/mercado-libre-buscador/src/app/module-search/components/searching-list/searching-list.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="items && items.length > 0" class="d-flex flex-column offset-md-1 col-md-10 bread">
-  <app-breadcrumb></app-breadcrumb>
+  <app-breadcrumb [categories]=breadcrumb></app-breadcrumb>
 </div>
-<div class="d-flex flex-column offset-md-1 col-md-10 list" *ngFor="let item of items">
-  <div *ngIf="!loading">
+<div class="d-flex flex-column offset-md-1 col-md-10 list">
+  <ng-template [ngIf]="!loading" *ngFor="let item of items">
     <app-searching-item class="container-fluid" [item]=item></app-searching-item>
     <mat-divider class="divider"></mat-divider>
-  </div>
-  <div *ngIf="loading" class="d-flex justify-content-center">
-    <mat-spinner class="spinner" [diameter]="25"></mat-spinner>
-  </div>
+  </ng-template>
+  <ng-template [ngIf]="loading">
+    <mat-spinner class="align-self-center spinner" [diameter]="25"></mat-spinner>
+  </ng-template>
 </div>
