Se corrije color en el Breadcrumb.

--- a/mercado-libre-buscador/src/app/module-shared/components/breadcrumb/breadcrumb.component.sass
+++ b/mercado-libre-buscador/src/app/module-shared/components/breadcrumb/breadcrumb.component.sass
@@ -1,7 +1,10 @@
+@import "../../../../variables.sass"
+
 .bread
      padding: 16px 0px
      font-size: 16px
      .item
          cursor: pointer
+         color: $placeholder
      .last
          font-weight: bold
