--- a/mercado-libre-buscador/src/app/module-product/components/product/product.component.html
+++ b/mercado-libre-buscador/src/app/module-product/components/product/product.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!loading" class="d-flex flex-column offset-md-1 col-md-10 bread">
-  <app-breadcrumb></app-breadcrumb>
+  <app-breadcrumb [categories]=breadcrumb></app-breadcrumb>
 </div>
 <div class="d-flex flex-column offset-md-1 col-md-10 product">
   <div *ngIf="!loading">
