--- a/mercado-libre-buscador/src/app/module-product/components/product/product.component.sass
+++ b/mercado-libre-buscador/src/app/module-product/components/product/product.component.sass
@@ -1,6 +1,6 @@
 @import "../../../../variables.sass"
 .bread
-    padding: 1rem 0 0 0
+    padding: 0
 .product
     background-color: $backList
     padding: 0
